# scaffold-flower

./: README.md  pyproject.toml
Scaffold/: pyproject.toml
Scaffold/pytorchexample/: client_app.py  server_app.py  task.py
scaffold/: __init__.py  client_app.py  server_app.py  task.py
