[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffold"
version = "1.0.0"
description = "Scaffold implementation using PyTorch and Flower (On the simulation environnement)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "thomas.calonge"

[tool.flwr.app.components]
serverapp = "scaffold.server_app:app"
clientapp = "scaffold.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
fraction-evaluate = 1
fraction-fit = 0.2
local-epochs = 5
num-clients = 100
learning-rate = 0.0025
global-learning-rate = 1
batch-size = 25
c_global = 0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100